--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,10 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "loader": {
+              ".svg?raw": "text",
+              ".svg": "text"
+            },
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
