--- a/package.json
+++ b/package.json
@@ -33,16 +33,26 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@analogjs/platform": "^1.21.2",
+    "@analogjs/vite-plugin-angular": "^1.21.2",
+    "@analogjs/vitest-angular": "^1.21.2",
     "@angular/build": "^20.3.5",
     "@angular/cli": "^20.3.5",
     "@angular/compiler-cli": "^20.2.2",
+    "@nx/angular": "^21.6.4",
+    "@nx/devkit": "^21.6.4",
+    "@nx/vite": "^21.6.4",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.9.0",
+    "jsdom": "^22.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "vite": "^6.0.0",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^3.0.0"
   }
 }
