--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -1,14 +1,17 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
     "types": [
-      "jasmine"
-    ]
+      "jasmine",
+      "vitest/globals"
+    ],
+    "target": "es2022"
   },
   "include": [
     "src/**/*.ts"
+  ],
+  "files": [
+    "src/test-setup.ts"
   ]
 }
